--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -25,8 +25,8 @@
     <string name="version_inverted_inferno">Scarica la v4.9.0</string>
     <string name="version_aospex">Scarica la v4.9.0</string>
     <string name="version_steam">Scarica la v4.9.0</string>
-    <string name="news1Content">ABTheme Autumn v4.9.0 rilasciato</string>
-    <string name="news2Content">ABTheme Redleaf v4.9.0 rilasciato</string>
+    <string name="news1Content">ABTheme Phlox v4.9.0 rilasciato</string>
+    <string name="news2Content">ABTheme Autumn v4.9.0 rilasciato</string>
     <string name="news1Date">01/10/2018</string>
     <string name="news2Date">23/9/2018</string>
     <string name="similar_themes">Temi simili</string>
@@ -42,7 +42,7 @@
     <string name="lastUpdate_crimson">Ultimo aggiornamento: 25/8/2018 per Telegram v4.9</string>
     <string name="version_pixelBlue">Scarica la v4.9.1</string>
     <string name="version_crimson">Scarica la v4.9.0</string>
-    <string name="news3Content">ABTheme Quetzal Red v4.9.0 rilasciato</string>
+    <string name="news3Content">ABTheme Redleaf v4.9.0 rilasciato</string>
     <string name="news3Date">20/9/2018</string>
     <string name="version_quetzal">Scarica la v4.9.0</string>
     <string name="lastUpdate_quetzal">Ultimo aggiornamento: 2/9/2018 per Telegram v4.9</string>
