--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,6 @@
     <string name="news2Content">ABTheme Autumn v4.9.0 released</string>
 
     <string name="news3Date">9/20/2018</string>
-    <string name="news3Content">ABTheme Redleaf Red v4.9.0 released</string>
+    <string name="news3Content">ABTheme Redleaf v4.9.0 released</string>
 
 </resources>
