--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,9 @@
     <string name="nav_header_subtitle" translatable="false">"@SventraPopizz"</string>
     <string name="username" translatable="false">"SventraPopizz"</string>
     <string name="nav_header_desc" translatable="false">Navigation header</string>
-    <string name="action_settings" translatable="false">Settings</string>
+    <string name="action_settings">Settings</string>
     <string name="similar_themes">Similar themes</string>
-    <string name="try_again" translatable="false">Try again</string>
+    <string name="try_again">Try again</string>
     <string name="download">Download</string>
     <string name="view">View</string>
 
@@ -37,6 +37,7 @@
     <string name="lastUpdate_redleaf">Last update: 9/20/2018 for Telegram v4.9</string>
     <string name="lastUpdate_autumn">Last update: 9/23/2018 for Telegram v4.9</string>
     <string name="lastUpdate_phlox">Last update: 10/01/2018 for Telegram v4.9</string>
+    <string name="lastUpdate_teal">Last update: 10/11/2018 for Telegram v4.9</string>
 
     <string name="version_standard">Download v4.9.0</string>
     <string name="version_au">Download v4.9.0</string>
@@ -59,14 +60,15 @@
     <string name="version_redleaf">Download v4.9.0</string>
     <string name="version_autumn">Download v4.9.0</string>
     <string name="version_phlox">Download v4.9.0</string>
+    <string name="version_teal">Download v4.9.0</string>
 
-    <string name="news1Date">10/01/2018</string>
-    <string name="news1Content">ABTheme Phlox v4.9.0 released</string>
+    <string name="news1Date">10/11/2018</string>
+    <string name="news1Content">ABTheme Teal v4.9.0 released</string>
 
-    <string name="news2Date">9/23/2018</string>
-    <string name="news2Content">ABTheme Autumn v4.9.0 released</string>
+    <string name="news2Date">10/01/2018</string>
+    <string name="news2Content">ABTheme Phlox v4.9.0 released</string>
 
-    <string name="news3Date">9/20/2018</string>
-    <string name="news3Content">ABTheme Redleaf v4.9.0 released</string>
+    <string name="news3Date">9/23/2018</string>
+    <string name="news3Content">ABTheme Autumn v4.9.0 released</string>
 
 </resources>
