+ Reworked theme pages so they are Amoled-Friendly (why weren't they in the first place you might ask, well, there's no answer to that) + Same thing as above but for the home page and the navigation pages (pure black thems, inverted themes and other themes) + Added a back button in the themes pages (you guys asked me so don't tell me it's useless as I knew it in the first place)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -71,6 +71,8 @@
     <string name="purple_themes">Temi viola</string>
     <string name="themes">Temi</string>
     <string name="take_me_home">TORNA ALLA HOME</string>
+    <string name="bring_me_back">INDIETRO</string>
+
 
 
 </resources>
