--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="purple_themes">Purple themes</string>
     <string name="themes">Themes</string>
     <string name="take_me_home">TAKE ME HOME</string>
+    <string name="bring_me_back">BACK</string>
 
 
 </resources>
