+ Reworked theme pages so they are Amoled-Friendly (why weren't they in the first place you might ask, well, there's no answer to that) + Same thing as above but for the home page and the navigation pages (pure black thems, inverted themes and other themes) + Added a back button in the themes pages (you guys asked me so don't tell me it's useless as I knew it in the first place)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -25,7 +25,7 @@
     <string name="version_inverted_inferno">Scarica la v4.9.0</string>
     <string name="version_aospex">Scarica la v4.9.0</string>
     <string name="version_steam">Scarica la v4.9.0</string>
-    <string name="news1Content">Teal rilasciato</string>
+    <string name="news1Content">Disrespect rilasciato</string>
     <string name="news1Date">11/10/2018</string>
     <string name="similar_themes">Temi simili</string>
     <string name="lastUpdate_monster">Ultimo aggiornamento: 17/8/2018 per Telegram v4.9</string>
@@ -49,9 +49,11 @@
     <string name="version_phlox">Scarica la v4.9.0</string>
     <string name="lastUpdate_phlox">Ultimo aggiornamento: 01/10/2018 per Telegram v4.9</string>
     <string name="lastUpdate_teal">Ultimo aggiornamento: 29/10/2018 per Telegram v4.9</string>
+    <string name="lastUpdate_disrespect">Ultimo aggiornamento: 22/11/2018 per Telegram v4.9</string>
     <string name="try_again">Prova ancora</string>
     <string name="action_settings">Impostazioni</string>
     <string name="version_teal">Scarica la v4.9.1</string>
+    <string name="version_disrespect">Scarica la v4.9.0</string>
     <string name="pure_black_themes">Temi totalmente neri</string>
     <string name="pure_black_string_home">Sfondi totalmente neri \nAlcuni temi hanno uno sfondo modificato</string>
     <string name="inverted_themes">Temi invertiti</string>
