--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
     <string name="lastUpdate_autumn">Last update: 9/23/2018 for Telegram v4.9</string>
     <string name="lastUpdate_phlox">Last update: 10/01/2018 for Telegram v4.9</string>
     <string name="lastUpdate_teal">Last update: 10/29/2018 for Telegram v4.9</string>
+    <string name="lastUpdate_disrespect">Last update: 11/22/2018 for Telegram v4.9</string>
+
 
     <string name="version_standard">Download v4.9.0</string>
     <string name="version_au">Download v4.9.0</string>
@@ -61,9 +63,10 @@
     <string name="version_autumn">Download v4.9.0</string>
     <string name="version_phlox">Download v4.9.0</string>
     <string name="version_teal">Download v4.9.1</string>
+    <string name="version_disrespect">Download v4.9.0</string>
 
     <string name="news1Date">10/11/2018</string>
-    <string name="news1Content">Teal released</string>
+    <string name="news1Content">Disrespect released</string>
     <string name="pure_black_themes">Pure black themes</string>
     <string name="pure_black_string_home">Pure black backgrounds \nSome of them have a custom wallpapers</string>
     <string name="inverted_themes">Inverted themes</string>
