--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="lastUpdate_phlox">Last update: 10/01/2018 for Telegram v4.9</string>
     <string name="lastUpdate_teal">Last update: 10/29/2018 for Telegram v4.9</string>
     <string name="lastUpdate_disrespect">Last update: 11/22/2018 for Telegram v4.9</string>
+    <string name="lastUpdate_pixelBluex">Made for TGX BETA 0.21.2.1018</string>
+    <string name="lastUpdate_infernox">Made for TGX BETA 0.21.2.1018</string>
 
 
     <string name="version_standard">Download v4.9.0</string>
@@ -64,12 +66,14 @@
     <string name="version_phlox">Download v4.9.0</string>
     <string name="version_teal">Download v4.9.1</string>
     <string name="version_disrespect">Download v4.9.0</string>
+    <string name="version_pixelBluex">Download</string>
+    <string name="version_infernox">Download</string>
 
     <string name="news1Date">10/11/2018</string>
-    <string name="news1Content">Disrespect released</string>
+    <string name="news1Content">Telegram X Themes released</string>
     <string name="pure_black_themes">Pure black themes</string>
     <string name="pure_black_string_home">Pure black backgrounds \nSome of them have a custom wallpapers</string>
-    <string name="tgx_themes">Telegram X themes</string>
+    <string name="tgx_themes">Telegram X Themes</string>
     <string name="tgx_string_home">Themes made for Telegram X</string>
     <string name="inverted_themes">Inverted themes</string>
     <string name="inverted_string_home">White backgrounds</string>
