--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
     <string name="pure_black_string_home">Pure black backgrounds \nSome of them have a custom wallpapers</string>
     <string name="tgx_themes">Telegram X Themes</string>
     <string name="tgx_string_home">Themes made for Telegram X</string>
+    <string name="tgx_string_page">Telegram X Beta NEEDED</string>
     <string name="inverted_themes">Inverted themes</string>
     <string name="inverted_string_home">White backgrounds</string>
     <string name="other_themes">Other themes</string>
