--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -25,7 +25,7 @@
     <string name="version_inverted_inferno">Scarica la v4.9.0</string>
     <string name="version_aospex">Scarica la v4.9.0</string>
     <string name="version_steam">Scarica la v4.9.0</string>
-    <string name="news1Content">Temi di Telegram X rilasciati</string>
+    <string name="news1Content">Teal rilasciato per \nTelegram X</string>
     <string name="news1Date">11/10/2018</string>
     <string name="similar_themes">Temi simili</string>
     <string name="lastUpdate_monster">Ultimo aggiornamento: 17/8/2018 per Telegram v4.9</string>
@@ -81,6 +81,8 @@
     <string name="lastUpdate_pixelBluex">Fatto per TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_infernox">Fatto per TGX BETA 0.21.2.1018</string>
     <string name="tgx_string_page">RICHIESTA la versione Beta di Telegram X</string>
+    <string name="version_tealx">Scarica</string>
+    <string name="lastUpdate_tealx">Fatto per TGX BETA 0.21.3.1037</string>
 
 
 </resources>
