--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -80,7 +80,7 @@
     <string name="version_pixelBluex">Scarica</string>
     <string name="lastUpdate_pixelBluex">Fatto per TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_infernox">Fatto per TGX BETA 0.21.2.1018</string>
-    <string name="tgx_string_page">RICHIESTA la versione Beta di Telegram X</string>
+    <string name="tgx_string_page">Potrebbe essere necessaria la versione Beta di Telegram X</string>
     <string name="version_tealx">Scarica</string>
     <string name="lastUpdate_tealx">Fatto per TGX BETA 0.21.3.1037</string>
 
