--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="download">Download</string>
     <string name="view">View</string>
 
-    <string name="lastUpdate_standard">Last update: 7/28/2018 for Telegram v4.9</string>
+    <string name="lastUpdate_standard">Last update: 2/2/2019 for Telegram v5.3</string>
     <string name="lastUpdate_au">Last update: 7/28/2018 for Telegram v4.9</string>
     <string name="lastUpdate_cyanogen">Last update: 8/7/2018 for Telegram v4.9</string>
     <string name="lastUpdate_mint">Last update: 8/3/2018 for Telegram v4.9</string>
@@ -42,8 +42,9 @@
     <string name="lastUpdate_pixelBluex">Made for TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_infernox">Made for TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_tealx">Made for TGX BETA 0.21.3.1037</string>
+    <string name="lastUpdate_invertedx">Made for TGX BETA 0.21.3.1037</string>
 
-    <string name="version_standard">Download v4.9.0</string>
+    <string name="version_standard">Download v5.3.0</string>
     <string name="version_au">Download v4.9.0</string>
     <string name="version_cyanogen">Download v4.9.1</string>
     <string name="version_mint">Download v4.9.0</string>
@@ -69,9 +70,10 @@
     <string name="version_pixelBluex">Download</string>
     <string name="version_infernox">Download</string>
     <string name="version_tealx">Download</string>
+    <string name="version_invertedx">Download</string>
 
-    <string name="news1Date">10/11/2018</string>
-    <string name="news1Content">Teal released for \nTelegram X</string>
+    <string name="news1Date">2/2/2019</string>
+    <string name="news1Content">Standard\nUpdated</string>
     <string name="pure_black_themes">Pure black themes</string>
     <string name="pure_black_string_home">Pure black backgrounds \nSome of them have a custom wallpapers</string>
     <string name="tgx_themes">Telegram X Themes</string>
