--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -86,6 +86,8 @@
     <string name="minussymbol"><![CDATA[<]]></string>
     <string name="version_invertedx">Scarica</string>
     <string name="lastUpdate_invertedx">Fatto per TGX BETA 0.21.3.1037</string>
+    <string name="version_jamx">Scarica</string>
+    <string name="lastUpdate_jamx">Fatto per TGX BETA 0.21.3.1037</string>
 
 
 </resources>
