--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="lastUpdate_infernox">Made for TGX BETA 0.21.2.1018</string>
     <string name="lastUpdate_tealx">Made for TGX BETA 0.21.3.1037</string>
     <string name="lastUpdate_invertedx">Made for TGX BETA 0.21.3.1037</string>
+    <string name="lastUpdate_jamx">Made for TGX BETA 0.21.3.1037</string>
 
     <string name="version_standard">Download v5.3.0</string>
     <string name="version_au">Download v4.9.0</string>
@@ -71,9 +72,10 @@
     <string name="version_infernox">Download</string>
     <string name="version_tealx">Download</string>
     <string name="version_invertedx">Download</string>
+    <string name="version_jamx">Download</string>
 
     <string name="news1Date">2/2/2019</string>
-    <string name="news1Content">Standard\nUpdated</string>
+    <string name="news1Content">Jam X\nReleased</string>
     <string name="pure_black_themes">Pure black themes</string>
     <string name="pure_black_string_home">Pure black backgrounds \nSome of them have a custom wallpapers</string>
     <string name="tgx_themes">Telegram X Themes</string>
