I can't be bothered to make multiple commits, just look at the play store page for the changelog

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -88,6 +88,8 @@
     <string name="lastUpdate_invertedx">Fatto per TGX BETA 0.21.3.1037</string>
     <string name="version_jamx">Scarica</string>
     <string name="lastUpdate_jamx">Fatto per TGX BETA 0.21.3.1037</string>
+    <string name="pure_black_nav">"Temi\nTotalmente\nNeri"</string>
+    <string name="other_themes_nav">"Altri\nTemi"</string>
 
 
 </resources>
