--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -90,6 +90,7 @@
     <string name="lastUpdate_jamx">Fatto per TGX BETA 0.21.3.1037</string>
     <string name="pure_black_nav">"Temi\nTotalmente\nNeri"</string>
     <string name="other_themes_nav">"Altri\nTemi"</string>
+    <string name="pickyourpoison">Scegli il tuo veleno</string>
 
 
 </resources>
