--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="try_again">Try again</string>
     <string name="download">Download</string>
     <string name="view">View</string>
+    <string name="pickyourpoison">Pick your poison</string>
+
 
     <string name="lastUpdate_standard">Last update: 2/2/2019 for Telegram v5.3</string>
     <string name="lastUpdate_au">Last update: 7/28/2018 for Telegram v4.9</string>
